fix audio button overflow

--- a/sass/prtrails.scss
+++ b/sass/prtrails.scss
@@ -135,7 +135,7 @@ div.black-bar {
   border-radius: 5px;
   width: auto;
   background: black;
-  padding: 5px 12px;
+  padding: 5px 8px;
   color: white;
   font-size: 1em;
   line-height: 2.2em;
