--- a/sass/topic_page.scss
+++ b/sass/topic_page.scss
@@ -100,7 +100,7 @@
           .audio-control-icon {
             float: right;
             padding: 0;
-            padding-right: 10px;
+            padding-right: 4px;
             font-size: 1.5em;
             &.pause {
               display: none;
@@ -136,7 +136,7 @@
         text-decoration: none;
         color: white;
         display: block;
-        padding: 14px;
+        padding: 14px 14px 14px 10px;
         
         .interact-chevron {
           position: relative;
@@ -239,14 +239,14 @@
 }
 
 .object-content .title {
-  padding: 15px 15px 15px 48px;
+  padding: 15px 15px 15px 44px;
 }
 
 .title, .topic-item {
   @include objectTitle;
   position: relative;
   height: $topicListItemHeight / 3;
-  width: 66%;
+  width: 68%;
   .container-navigation &, .container-globe & {
       background-color: $upperGalleryColor;
   }
